<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.MainActivity" >

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:title="@string/app_name"/>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingEnd="30dp"
        android:paddingStart="30dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/et_your_name"
>
            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="saveName"
            android:text="@string/btn_save_name" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutRepoName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/et_repository_search"
            >
            <EditText
                android:id="@+id/etRepoName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutLanguage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_language"
            >
            <EditText
                android:id="@+id/etLanguage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_search_repo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="listRepositories"
            android:text="@string/btn_search_repositories" />
        <!--End-->

        <!-- GitHub user name-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutGithubUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_hint_github_username"
            android:layout_marginTop="30dp">

            <EditText
                android:id="@+id/etGithubUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_search_github_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="listUserRepositories"
            android:text="@string/btn_search_github_user" />
        <!-- END -->

    </LinearLayout>

</LinearLayout>